--- a/no-asioseo-nags.css
+++ b/no-asioseo-nags.css
@@ -10,4 +10,250 @@
 /*Backend Nags*/
 
 
-/Plugin Settings Nags*/
+/*Plugin Settings Nags*/
+
+#aioseop-about,
+#aioseop-list,
+.is-upgrade-premium,
+.aioseo-review-plugin-cta,
+#aioseop-flyout,
+.aioseo-settings-row.local-seo,
+.upgrade_menu_link,
+#aioseop-video-sitemap-upsell,
+#toplevel_page_aioseo > ul > li:nth-child(13),
+#aioseop-notice-bar,
+.postbox-container div#aiosp_upgrade_wrapper,
+#aiosp_sitemap_priority_wrapper,
+div#aiosp_license_key_wrapper,
+#aiosp_sitemap_status_metabox .aioseop-news-sitemap-upsell,
+.aioseop-news-sitemap-upsell,
+#aiosp_sitemap_frequency_wrapper,
+#wpbody-content > div.wrap.acfe-ui > div.aioseop-preview-wrapper,
+.aioseop-preview-wrapper,
+#wp-admin-bar-aioseop-pro-upgrade,
+li#wp-admin-bar-aioseop-pro-upgrade a.ab-item,
+.aioseop-upsell-blurred,
+#wpbody-content > div.wrap.acfe-ui > div.aioseop-preview-wrapper,
+#toplevel_page_aioseo .aioseo-submenu-highlight,
+.aioseo-submenu-highlight,
+#toplevel_page_aioseo > ul > li:nth-child(7),
+#wp-admin-bar-aioseo-pro-upgrade,
+#wp-admin-bar-aioseo-local-seo,
+#wpfooter > a:nth-child(8),
+#wpbody-content > div.aioseo-app > div > div.aioseo-main > div.aioseo-container > div.aioseo-tabs > div.tabs-scroller > div > div.md-tabs-navigation.md-elevation-0 > a:nth-child(3),
+#wpbody-content > div.aioseo-app > div > div.aioseo-main > div.aioseo-container > div.aioseo-search-appearance-content-types > div:nth-child(2),
+#toplevel_page_aioseo > ul > li:nth-child(10),
+.aioseo-taxonomy-upsell,
+.aioseo-upgrade-bar,
+.aioseo-logo-gear,
+.upgrade-text,
+#wpbody-content > div.aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div > div.aioseo-row > div:nth-child(2) > div.aioseo-cta.dashboard-cta,
+#wpbody-content > div.aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div > div.aioseo-row > div:nth-child(1) > div.aioseo-row > div:nth-child(4) > div,
+.aioseo-setup-wizard-container,
+#wpbody-content > div.aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div > div.aioseo-row > div:nth-child(2) > div.aioseo-card.dashboard-support > div:nth-child(2) > div > div:nth-child(2),
+#wp-admin-bar-aioseo-feature-manager,
+#wp-admin-bar-aioseo-about,
+#wp-admin-bar-aioseo-feature-manager,
+/* activate to disable the front-end dropdown #wp-admin-bar-aioseo-main */
+#wp-admin-bar-aioseo-pro-upgrade,
+#wp-admin-bar-aioseo-link-assistant,
+#wp-admin-bar-aioseo-seo-analysis,
+#wp-admin-bar-aioseo-redirects,
+#wp-admin-bar-aioseo-about,
+#wp-admin-bar-aioseo-feature-manager,
+#wp-admin-bar-aioseo-local-seo,
+#wp-admin-bar-aioseo-tools,
+#toplevel_page_aioseo > ul > li:nth-child(9),
+.aioseo-settings-row.facebook-default-image-source.aioseo-row,
+#wpbody-content > div.aioseo-app > div > div.aioseo-main > div.aioseo-container > div.aioseo-facebook > div:nth-child(1) > div:nth-child(2) > div > div:nth-child(7),
+#toplevel_page_aioseo > ul > li:nth-child(11),
+#toplevel_page_aioseo > ul > li:nth-child(12),
+#wpbody-content > div.aioseo-app > div > div.aioseo-main > div.aioseo-container > div.aioseo-tabs > div.tabs-scroller > div > div.md-tabs-navigation.md-elevation-0 > a:nth-child(5),
+.aioseo-general-settings .license-cta-box,
+#wpbody-content > div.aioseo-app > div > div.aioseo-main > div.aioseo-container > div.aioseo-advanced > div > div:nth-child(2) > div > div:nth-child(4),
+#wpbody-content > div.aioseo-app > div > div.aioseo-main > div.aioseo-container > div.aioseo-advanced > div > div:nth-child(2) > div > div:nth-child(5),
+#wpbody-content > div.aioseo-app > div > div.aioseo-main > div.aioseo-container > div.aioseo-advanced > div > div:nth-child(2) > div > div:nth-child(6),
+#toplevel_page_aioseo > ul > li:nth-child(8),
+.aioseo-flyout-menu-button,
+#aioseop-about,
+#aioseop-list,
+#aioseop-flyout,
+.upgrade_menu_link,
+#aioseop-video-sitemap-upsell,
+#aioseop-notice-bar,
+.postbox-container div#aiosp_upgrade_wrapper,
+#aiosp_sitemap_priority_wrapper,
+#aiosp_sitemap_frequency_wrapper,
+#wpbody-content > div.wrap.acfe-ui > div.aioseop-preview-wrapper,
+.aioseop-preview-wrapper,
+#wp-admin-bar-aioseop-pro-upgrade,
+li#wp-admin-bar-aioseop-pro-upgrade a.ab-item,
+.aioseop-upsell-blurred,
+#wpbody-content > div.wrap.acfe-ui > div.aioseop-preview-wrapper,
+.proupgrade,
+span.proupgrade,
+.aioseo-plugin-row .proupgrade a,
+#the-list > tr.active.is-uninstallable.aioseo-plugin-row > td.plugin-title.column-primary > div > span.proupgrade,
+.aioseo-settings-row.snippet-additional-keyphrases-row.aioseo-row,
+#aioseo-settings > div.inside > div:nth-child(2) > div > div.aioseo-tabs.internal > div > div > div.md-tabs-navigation.md-elevation-0 > button:nth-child(3),
+#aioseo-settings > div.inside > div:nth-child(2) > div > div.aioseo-tab-content.aioseo-post-advanced > div:nth-child(3),
+.aioseo-card.aioseo-sidebar-card.card-additional-keyphrase,
+#aioseo-post-settings-sidebar > div > div > div.aioseo-tab-content.aioseo-post-advanced > div:nth-child(3),
+#aioseo-post-settings-sidebar > div > div > div.aioseo-tabs.internal > div > div > div.md-tabs-navigation.md-elevation-0 > button:nth-child(3),
+#aioseo-post-settings-sidebar > div > div > div.aioseo-tabs.internal > div > div > div.md-tabs-navigation.md-elevation-0 > button:nth-child(3) {
+    display: none !important;
+}
+
+#aioseo-post-settings-sidebar > div > div > div.aioseo-tabs.internal > div > div > div.md-tabs-navigation.md-elevation-0 > button:nth-child(4) {
+    display: none !important;
+}
+
+#aioseo-post-settings-sidebar > div > div > div.aioseo-tabs.internal > div > div > div.md-tabs-navigation.md-elevation-0 > button:nth-child(5),
+#aioseo-settings > div.inside > div:nth-child(2) > div > div.aioseo-tabs.internal > div > div > div.md-tabs-navigation.md-elevation-0 > button:nth-child(4),
+#aioseo-settings > div.inside > div:nth-child(2) > div > div.aioseo-tabs.internal > div > div > div.md-tabs-navigation.md-elevation-0 > button:nth-child(5),
+#wpbody-content > div.aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div > div.aioseo-row > div:nth-child(1) > div.aioseo-row > div:nth-child(8),
+#wpbody-content > div.aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div > div.aioseo-row > div:nth-child(1) > div.aioseo-row > div:nth-child(9),
+#wpbody-content > div.aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div > div.aioseo-row > div:nth-child(1) > div.aioseo-row > div:nth-child(4) {
+    width: 0px;
+    margin-bottom: 0;
+    display: none !important;
+    visibility: hidden !important;
+    z-index: -1000 !important;
+}
+
+#wpbody-content > div.aioseo-app > div > div.aioseo-main > div.aioseo-container > div.aioseo-webmaster-tools > div > div:nth-child(2) > div > div.webmaster-tools-toggles.aioseo-row > div:nth-child(6) {
+    width: 0px;
+    margin-bottom: 0;
+    display: none !important;
+    visibility: hidden !important;
+    z-index: -1000 !important;
+    order: 100 !important;
+}
+
+.aioseo-overview .aioseo-alert,
+.aioseo-blog {
+    display: none !important;
+}
+
+#wpbody-content > div.aioseo-flyout-menu.is-open > div.aioseo-flyout-menu-items > a:nth-child(1),
+#aioseo-settings > div.inside > div:nth-child(2) > div.aioseo-app.aioseo-post-settings > div.aioseo-tab > div.aioseo-post-advanced > div:nth-child(3) {
+    display: none !important;
+}
+
+/*Editor Sidebar */
+#aioseo-post-settings-sidebar > div > div.aioseo-post-settings > div > a:nth-child(6),
+#aioseo-post-settings-sidebar > div > div > div > a:nth-child(5),
+#aioseo-post-settings-sidebar > div > div > div > a:nth-child(4),
+#aioseo-post-settings-sidebar > div > div > div > a:nth-child(3) {
+    display: none !important;
+}
+
+/* Settings >Breadcumbs */
+div.aioseo-app > div > div.aioseo-main > div.aioseo-container > div.aioseo-breadcrumbs > div.aioseo-breadcrumbs {
+    display: none !important;
+}
+
+div.aioseo-app > div > div.aioseo-main > div.aioseo-container > div.aioseo-breadcrumbs > div.aioseo-breadcrumbs > div.aioseo-card {
+    display: none !important;
+}
+
+/* Sitemaps */
+#wpbody-content > div.aioseo-app > div > div.aioseo-main > div.aioseo-container > div.aioseo-tabs > div.tabs-scroller > div > div.md-tabs-navigation.md-elevation-0 > a:nth-child(2) {
+    display: none !important;
+}
+
+/*OpenAI api key input */
+#aioseo-open-ai-api-key {
+    display: none;
+}
+
+/* Search Statistics Ad in WP AdminBar */
+#wp-admin-bar-aioseo-search-statistics {
+    display: none !important;
+    visibility: hidden !important;
+}
+
+/* seo stats on dashboard */
+#wpbody-content > div.aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div > div.aioseo-row > div:nth-child(1) > div.aioseo-row > div:nth-child(6) {
+    display: none !important;
+    visibility: hidden !important;
+}
+
+
+#aioseo-app > div > div > div > div.aioseo-main > div.aioseo-container > div > div.aioseo-row > div:nth-child(2) > div.aioseo-cta.dashboard-cta {
+    display: none !important;
+}
+
+/*sitemaps*/
+/*video*/
+#aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div.aioseo-tabs > div.tabs-scroller > div > div > div:nth-child(2) > span,
+#aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div.aioseo-tabs > div.tabs-scroller > div > div > div:nth-child(2) {
+    display: none !important;
+}
+
+/*news-sitemap*/
+#aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div.aioseo-tabs > div.tabs-scroller > div > div > div:nth-child(3),
+.aioseo-news-sitemap-lite {
+    display: none !important;
+}
+
+/*link-assistent*/
+.aioseo-link-assistant {
+    display: none !important;
+}
+
+/*DASHBOARD*/
+/*links ass*/
+#aioseo-app > div > div > div > div.aioseo-main > div.aioseo-container > div > div.aioseo-row > div:nth-child(1) > div.aioseo-row.aioseo-quicklinks-cards-row > div:nth-child(8) {
+    display: none !important;
+}
+
+/*re directs*/
+.aioseo-redirects,
+#aioseo-app > div > div > div > div.aioseo-main > div.aioseo-container > div > div.aioseo-row > div:nth-child(1) > div.aioseo-row.aioseo-quicklinks-cards-row > div:nth-child(9) {
+    display: none !important;
+}
+
+/*local seo*/
+#aioseo-app > div > div > div > div.aioseo-main > div.aioseo-container > div > div.aioseo-row > div:nth-child(1) > div.aioseo-row.aioseo-quicklinks-cards-row > div:nth-child(4) {
+    display: none !important;
+}
+
+/*upgrade nags*/
+.aioseo-upgrade-bar,
+.upgrade-text {
+    display: none !important;
+}
+
+/*search stats*/
+.aioseo-search-statistics-dashboard,
+.aioseo-search-statistics-content-rankings {
+    display: none !important;
+}
+
+/*tab search appearance image seo*/
+#aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div.aioseo-search-appearance-content-types > div:nth-child(2) {
+    display: none !important;
+}
+
+/*search stats on dashboard*/
+#aioseo-app > div > div > div > div.aioseo-main > div.aioseo-container > div > div.aioseo-row > div:nth-child(1) > div.aioseo-row.aioseo-quicklinks-cards-row > div:nth-child(6) {
+    display: none !important;
+}
+
+/*ADMIN MENU*/
+/*feature manager*/
+#toplevel_page_aioseo > ul > li:nth-child(14) {
+    display: none !important;
+}
+
+/*EDITOR*/
+/*schema*/
+#aioseo-post-settings-metabox > div > div.aioseo-app.aioseo-post-settings > div.aioseo-tabs.internal > div.tabs-scroller > div > div > div:nth-child(3),
+.inline-upsell {
+    display: none !important;
+}
+
+#aioseo-post-settings-metabox > div > div.aioseo-app.aioseo-post-settings > div.aioseo-tabs.internal > div.tabs-scroller > div > div > div:nth-child(5) {
+    display: none !important;
+}
