--- a/no-asioseo-nags.css
+++ b/no-asioseo-nags.css
@@ -257,3 +257,73 @@ div.aioseo-app > div > div.aioseo-main > div.aioseo-container > div.aioseo-bread
 #aioseo-post-settings-metabox > div > div.aioseo-app.aioseo-post-settings > div.aioseo-tabs.internal > div.tabs-scroller > div > div > div:nth-child(5) {
     display: none !important;
 }
+
+
+/*Dashboard*/
+/*page=aioseo*/
+
+/*General Settings*/
+/*?page=aioseo-settings#/general-settings*/
+        .license-cta-box,
+        {display:none!important}
+    
+    /*TAB: Breadcrumbs*/
+    /*page=aioseo-settings#/breadcrumbs*/
+
+        div.aioseo-breadcrumbs > div.aioseo-breadcrumbs
+        {display:none!important}
+
+    /*TAB: Access Control*/
+        div.aioseo-main > div.aioseo-container > div.aioseo-tabs > div.tabs-scroller > div > div > div:nth-child(5),
+        .aioseo-access-control-lite
+        {display:none!important}
+ 
+    /*TAB: Advanced*/
+    /*Taxononmy Columns*/
+        div.aioseo-advanced > div > div:nth-child(2) > div > div:nth-child(4),
+        {display:none!important}  
+     
+/*Search Appearance*/
+/*?page=aioseo-search-appearance*/
+   .local-seo
+    {display:none!important}
+    
+     /*TAB: Content Types*/
+     /*Schema Markup Posts*/
+        #aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div.aioseo-search-appearance-content-types > div:nth-child(1) > div:nth-child(2) > div.aioseo-tabs.internal > div.tabs-scroller > div > div > div:nth-child(2)
+        {display:none!important}
+     
+     /*Custom Fields Posts*/
+        #aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div.aioseo-search-appearance-content-types > div:nth-child(1) > div:nth-child(2) > div.aioseo-tabs.internal > div.tabs-scroller > div > div > div:nth-child(3)
+        {display:none!important}
+     
+    /*Schema Markup Pages*/
+        #aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div.aioseo-search-appearance-content-types > div:nth-child(2) > div:nth-child(2) > div.aioseo-tabs.internal > div.tabs-scroller > div > div > div:nth-child(2)
+        {display:none!important}
+    
+    /*Custom Fields Pages*/
+        #aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div.aioseo-search-appearance-content-types > div:nth-child(2) > div:nth-child(2) > div.aioseo-tabs.internal > div.tabs-scroller > div > div > div:nth-child(3)
+        {display:none!important}
+    
+    /*TAB: Media*/
+        #aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div.aioseo-search-appearance-content-types > div:nth-child(2)
+        {display:none!important}
+
+
+/*Sitemaps*/
+/*?page=aioseo-sitemaps*/
+     /*TAB: Video Sitemap*/
+        #aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div.aioseo-tabs > div.tabs-scroller > div > div > div:nth-child(2)
+        {display:none!important}
+
+    /*TAB: News Sitemap*/
+        #aioseo-app > div > div > div.aioseo-main > div.aioseo-container > div.aioseo-tabs > div.tabs-scroller > div > div > div:nth-child(3)
+        {display:none!important}
+
+/* general Premium Nags */
+.aioseo-pro-badge,
+.inline-upsell,
+.upsell,
+.aioseo-upgrade-bar,
+.upgrade-text
+{display:none!important}
